--- a/html/01_CourseInfo.html
+++ b/html/01_CourseInfo.html
@@ -7517,7 +7517,8 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="TECNICHE-INFORMATICHE-PER-LA-FISICA">TECNICHE INFORMATICHE PER LA FISICA<a class="anchor-link" href="#TECNICHE-INFORMATICHE-PER-LA-FISICA">¶</a></h1><h2 id="Ezio-Maina">Ezio Maina<a class="anchor-link" href="#Ezio-Maina">¶</a></h2>
+<h1 style="font-size:50px">TECNICHE INFORMATICHE PER LA FISICA</h1>
+<h1 style="font-size:30px">Ezio Maina</h1>
 </div>
 </div>
 </div>
@@ -7541,7 +7542,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
+<h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><ul>
 <li>Assumerò che non sappiate nulla di programmazione e che abbiate solo una vaga idea di cosa sia un programma e di cosa faccia un programmatore</li>
 <li>Useremo python 3</li>
 <li>Useremo l'interfaccia Jupyter Lab e i notebook Jupyter</li>
@@ -7619,7 +7620,8 @@ o <strong>FLIPPED CLASSROOM</strong> (<a href="https://en.wikipedia.org/wiki/Fli
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Valutazione">Valutazione<a class="anchor-link" href="#Valutazione">¶</a></h2><ul>
+<h2 id="Valutazione">Valutazione<a class="anchor-link" href="#Valutazione">¶</a></h2><hr/>
+<ul>
 <li>Il corso non ha voto finale. Approvato/Non approvato</li>
 <li>Alla fine di alcune sessioni in laboratorio una prova con alcuni esercizi. Valutati.</li>
 </ul>
