--- a/html/03_Tipi_di_Dati.html
+++ b/html/03_Tipi_di_Dati.html
@@ -8011,7 +8011,7 @@ Python è un linguaggio interpretato i comandi vengono letti ed eseguiti sequenz
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.2-Valori-logici-o-variabili-di-Boole.">3.2 Valori logici o variabili di Boole.<a class="anchor-link" href="#3.2-Valori-logici-o-variabili-di-Boole.">¶</a></h2><p>In un programma si ha spesso la necessità di valutare se una certa situazione si verifica oppure no. Per esempio, verificare se il discriminante di una equazione algebrica di secondo grado è positivo, oppure se un cliente è presente nel nostro indirizzario.
+<h2 id="Valori-logici-o-variabili-di-Boole.">Valori logici o variabili di Boole.<a class="anchor-link" href="#Valori-logici-o-variabili-di-Boole.">¶</a></h2><p>In un programma si ha spesso la necessità di valutare se una certa situazione si verifica oppure no. Per esempio, verificare se il discriminante di una equazione algebrica di secondo grado è positivo, oppure se un cliente è presente nel nostro indirizzario.
 In queste situazioni si utilizzano delle variabili, dette booleane o di Boole, che possono assumere solo due valori, vero oppure falso. Python ha due oggetti built-in che hanno i valori logici <code>True</code> e <code>False</code>:</p>
 </div>
 </div>
@@ -8081,7 +8081,7 @@ In queste situazioni si utilizzano delle variabili, dette booleane o di Boole, c
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.3-Confronti,-uguaglianza-e-identit%C3%A0.">3.3 Confronti, uguaglianza e identità.<a class="anchor-link" href="#3.3-Confronti,-uguaglianza-e-identit%C3%A0.">¶</a></h2><p>Gli operatori <code>==</code>, <code>!=</code>, <code>&gt;</code>,<code>&gt;=</code>, <code>&lt;</code>, <code>&lt;=</code> servono a confrontare i <em>valori</em> di due oggetti. Restituiscono <code>True</code> oppure <code>False</code>.
+<h2 id="Confronti,-uguaglianza-e-identit%C3%A0.">Confronti, uguaglianza e identità.<a class="anchor-link" href="#Confronti,-uguaglianza-e-identit%C3%A0.">¶</a></h2><p>Gli operatori <code>==</code>, <code>!=</code>, <code>&gt;</code>,<code>&gt;=</code>, <code>&lt;</code>, <code>&lt;=</code> servono a confrontare i <em>valori</em> di due oggetti. Restituiscono <code>True</code> oppure <code>False</code>.
 Per esempio:</p>
 </div>
 </div>
@@ -8341,7 +8341,7 @@ Per esempio:</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.4-Sequenze">3.4 Sequenze<a class="anchor-link" href="#3.4-Sequenze">¶</a></h2><p>Stringhe, liste e ntuple (tuples) sono <em>sequenze</em>. Possono essere <em>indicizzate</em> e <em>sezionate</em> (<em>sliced</em>) nello stesso modo.</p>
+<h2 id="Sequenze">Sequenze<a class="anchor-link" href="#Sequenze">¶</a></h2><p>Stringhe, liste e ntuple (tuples) sono <em>sequenze</em>. Possono essere <em>indicizzate</em> e <em>sezionate</em> (<em>sliced</em>) nello stesso modo.</p>
 <p>Ntuples e stringhe sono “immutable” (fondamentalmente significa che non è possibile cambiare i singoli elementi in una nntupla, e non possiamo modificare i singoli caratteri all'interno di una stringa) mentre le liste sono “mutable” (cioè possiamo cambiare gli elementi di una lista.)</p>
 <p>Le sequenze condividono le operazioni seguenti:</p>
 <table style="font-size:15px;">
@@ -9017,7 +9017,7 @@ per avere una lista di frasi complete si potrebbe usare il punto "." come separa
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="3.4.2-Liste">3.4.2 Liste<a class="anchor-link" href="#3.4.2-Liste">¶</a></h3><p>Una liste è una sequenza mutabile di oggetti. Gli  oggetti possono essere di qualsiasi tipo, per esempio numeri interi:</p>
+<h3 id="Liste">Liste<a class="anchor-link" href="#Liste">¶</a></h3><p>Una liste è una sequenza mutabile di oggetti. Gli  oggetti possono essere di qualsiasi tipo, per esempio numeri interi:</p>
 </div>
 </div>
 </div>
@@ -9873,7 +9873,7 @@ Notate che il valore corrispondente a <code>start</code> è il primo elemento pr
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="3.4.3-Ntuples">3.4.3 Ntuples<a class="anchor-link" href="#3.4.3-Ntuples">¶</a></h3><p>Una <em>nntupla</em> (<em>tuple</em>) è una sequenza (immutable) di oggetti. Le ntuple si comportano in modo molto simile alle liste con l'eccezione che non possono essere modificate.</p>
+<h3 id="Ntuples">Ntuples<a class="anchor-link" href="#Ntuples">¶</a></h3><p>Una <em>nntupla</em> (<em>tuple</em>) è una sequenza (immutable) di oggetti. Le ntuple si comportano in modo molto simile alle liste con l'eccezione che non possono essere modificate.</p>
 <p>Per esempio, qualunque tipo di oggetto vi può comparire:</p>
 </div>
 </div>
@@ -10304,7 +10304,7 @@ Notate che il valore corrispondente a <code>start</code> è il primo elemento pr
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="3.4.4-Conversioni-fra-tipi">3.4.4 Conversioni fra tipi<a class="anchor-link" href="#3.4.4-Conversioni-fra-tipi">¶</a></h3><p>La funzione <code>type</code> mostra il tipo di un oggetto. È possibile convertire un oggetto in uno di tipo diverso.</p>
+<h3 id="Conversioni-fra-tipi">Conversioni fra tipi<a class="anchor-link" href="#Conversioni-fra-tipi">¶</a></h3><p>La funzione <code>type</code> mostra il tipo di un oggetto. È possibile convertire un oggetto in uno di tipo diverso.</p>
 </div>
 </div>
 </div>
@@ -10596,7 +10596,7 @@ Notate che il valore corrispondente a <code>start</code> è il primo elemento pr
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="3.4.5-Indici-in-sequenze">3.4.5 Indici in sequenze<a class="anchor-link" href="#3.4.5-Indici-in-sequenze">¶</a></h3><p>Abbiamo già accennato più volte all'uso degli indici in sequenze introducendo le varie strutture dati. Questa sezione cerca di sistematizzare l'argomento.<br/> <br/>
+<h3 id="Indici-in-sequenze">Indici in sequenze<a class="anchor-link" href="#Indici-in-sequenze">¶</a></h3><p>Abbiamo già accennato più volte all'uso degli indici in sequenze introducendo le varie strutture dati. Questa sezione cerca di sistematizzare l'argomento.<br/> <br/>
 I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro indice fra parentesi quadre(<code>[</code> e <code>]</code>). Notate che Python (come in C ma diversamente dal Fortran e da Matlab) conta gli indici partendo da zero!</p>
 </div>
 </div>
@@ -11082,7 +11082,7 @@ I singoli oggetti in una lista/stringa/tuple possono essere indicati con il loro
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.5-Dizionari">3.5 Dizionari<a class="anchor-link" href="#3.5-Dizionari">¶</a></h2><p>I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi <em>unordered</em> di coppie <em>key-value</em>. Le keywords devono essere oggetti immutabili mentre i dizionari sono oggetti mutabili.</p>
+<h2 id="Dizionari">Dizionari<a class="anchor-link" href="#Dizionari">¶</a></h2><p>I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi <em>unordered</em> di coppie <em>key-value</em>. Le keywords devono essere oggetti immutabili mentre i dizionari sono oggetti mutabili.</p>
 <p>Un dizionario vuoto può essere creato usando parentesi graffe (curly braces):</p>
 </div>
 </div>
@@ -11712,7 +11712,7 @@ Per eliminare una coppia key-value da un dizionario si può usare <code>del</cod
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.6-Locazione-in-memoria-e-copia-di-oggetti">3.6 Locazione in memoria e copia di oggetti<a class="anchor-link" href="#3.6-Locazione-in-memoria-e-copia-di-oggetti">¶</a></h2><p>Abbiamo visto che la funzione <code>id()</code> restituisce l'indirizzo in memoria di un oggetto, e che possiamo utilizzare questa funzione per verificare se due oggeti sono identici, cioè se si riferiscono alla stessa locazione di memoria.</p>
+<h2 id="Locazione-in-memoria-e-copia-di-oggetti">Locazione in memoria e copia di oggetti<a class="anchor-link" href="#Locazione-in-memoria-e-copia-di-oggetti">¶</a></h2><p>Abbiamo visto che la funzione <code>id()</code> restituisce l'indirizzo in memoria di un oggetto, e che possiamo utilizzare questa funzione per verificare se due oggeti sono identici, cioè se si riferiscono alla stessa locazione di memoria.</p>
 </div>
 </div>
 </div>
@@ -12020,7 +12020,7 @@ Se cambiamo il valore di n cambia anche la posizione in memoria:</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="3.7.1-Mutabilit%C3%A0,-Immutabilit%C3%A0-e-metodi-che-modificano-oggetti-immutabili">3.7.1 Mutabilità, Immutabilità e metodi che modificano oggetti immutabili<a class="anchor-link" href="#3.7.1-Mutabilit%C3%A0,-Immutabilit%C3%A0-e-metodi-che-modificano-oggetti-immutabili">¶</a></h3>
+<h3 id="Mutabilit%C3%A0,-Immutabilit%C3%A0-e-metodi-che-modificano-oggetti-immutabili">Mutabilità, Immutabilità e metodi che modificano oggetti immutabili<a class="anchor-link" href="#Mutabilit%C3%A0,-Immutabilit%C3%A0-e-metodi-che-modificano-oggetti-immutabili">¶</a></h3>
 </div>
 </div>
 </div>
