--- a/html/04_control-flow.html
+++ b/html/04_control-flow.html
@@ -7537,7 +7537,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.1-If-then-else">4.1 If-then-else<a class="anchor-link" href="#4.1-If-then-else">¶</a></h2><p>La costruzione <code>if</code> permette di eseguire del codice in modo condizionato. Dopo la parola chiave <code>if</code> deve essere presente una <em>condizione</em> seguita da due punti (<code>:</code>). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (<code>True</code>). Il blocco di comandi termina quando finisce l'indentazione.</p>
+<h2 id="If-then-else">If-then-else<a class="anchor-link" href="#If-then-else">¶</a></h2><p>La costruzione <code>if</code> permette di eseguire del codice in modo condizionato. Dopo la parola chiave <code>if</code> deve essere presente una <em>condizione</em> seguita da due punti (<code>:</code>). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (<code>True</code>). Il blocco di comandi termina quando finisce l'indentazione.</p>
 </div>
 </div>
 </div>
@@ -7705,7 +7705,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.2-For-loop">4.2 For loop<a class="anchor-link" href="#4.2-For-loop">¶</a></h2><p>I <code>for</code>-loop permettono di iterare su una sequenza (per esempio una stringa o una lista). Ecco un esempio:</p>
+<h2 id="For-loop">For loop<a class="anchor-link" href="#For-loop">¶</a></h2><p>I <code>for</code>-loop permettono di iterare su una sequenza (per esempio una stringa o una lista). Ecco un esempio:</p>
 </div>
 </div>
 </div>
@@ -7943,7 +7943,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="4.2.1-Loop-concatenati">4.2.1 Loop concatenati<a class="anchor-link" href="#4.2.1-Loop-concatenati">¶</a></h3>
+<h3 id="Loop-concatenati">Loop concatenati<a class="anchor-link" href="#Loop-concatenati">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8063,7 +8063,7 @@ Per ogni valore dell'indice esterno <code>i</code>, si calcola il risultato per 
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Informazioni-ulteriori">Informazioni ulteriori<a class="anchor-link" href="#Informazioni-ulteriori">¶</a></h3><ul>
+<h5 id="Informazioni-ulteriori">Informazioni ulteriori<a class="anchor-link" href="#Informazioni-ulteriori">¶</a></h5><ul>
 <li>Introduzione ai for-loops in <a href="http://docs.python.org/tutorial/controlflow.html#for-statements">Python tutorial, section 4.2</a></li>
 </ul>
 </div>
@@ -8076,7 +8076,7 @@ Per ogni valore dell'indice esterno <code>i</code>, si calcola il risultato per 
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.3-While-loop">4.3 While loop<a class="anchor-link" href="#4.3-While-loop">¶</a></h2><p>La parola chiave <code>while</code> permette di ripetere una operazione mentre una condizione è vera. Dopo la parola chiave <code>while</code> deve essere presente una condizione seguita da due punti (:). Nella riga successiva inizia un nuovo blocco di comandi (che quindi deve essere indentato!) che viene eseguito se la condizione è True.<br/>
+<h2 id="While-loop">While loop<a class="anchor-link" href="#While-loop">¶</a></h2><p>La parola chiave <code>while</code> permette di ripetere una operazione mentre una condizione è vera. Dopo la parola chiave <code>while</code> deve essere presente una condizione seguita da due punti (:). Nella riga successiva inizia un nuovo blocco di comandi (che quindi deve essere indentato!) che viene eseguito se la condizione è True.<br/>
 Supponiamo di voler sapere per quanti anni è necessario tenere 100 euro in un conto bancario per arrivare a 200 euro grazie ad un interesse del 5% annuo. Ecco un programma che lo calcola:</p>
 </div>
 </div>
@@ -8194,7 +8194,7 @@ Esempi:
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.4-Come-filtrare-una-lista/ntupla/dizionario-con-if">4.4 Come filtrare una lista/ntupla/dizionario con <code>if</code><a class="anchor-link" href="#4.4-Come-filtrare-una-lista/ntupla/dizionario-con-if">¶</a></h2><p>Spesso è necessario estrarre da una lista gli elementi che soddisfano una certa condizione. Lo si può ottenere con un <code>if</code> <em>all'interno</em> della definizione della lista:</p>
+<h2 id="Come-filtrare-una-lista/ntupla/dizionario-con-if">Come filtrare una lista/ntupla/dizionario con <code>if</code><a class="anchor-link" href="#Come-filtrare-una-lista/ntupla/dizionario-con-if">¶</a></h2><p>Spesso è necessario estrarre da una lista gli elementi che soddisfano una certa condizione. Lo si può ottenere con un <code>if</code> <em>all'interno</em> della definizione della lista:</p>
 </div>
 </div>
 </div>
@@ -8461,7 +8461,7 @@ Esempi:
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.5-Interrompere-un-loop">4.5 Interrompere un loop<a class="anchor-link" href="#4.5-Interrompere-un-loop">¶</a></h2>
+<h2 id="Interrompere-un-loop">Interrompere un loop<a class="anchor-link" href="#Interrompere-un-loop">¶</a></h2>
 </div>
 </div>
 </div>
