--- a/html/05_input-output-files.html
+++ b/html/05_input-output-files.html
@@ -7527,9 +7527,9 @@ a.anchor-link {
 </div>
 <hr/>
 <p>In questa sezione descriviamo come specificare il formato con cui stampare le informazioni sia sullo shermo che in un file.</p>
-<h2 id="5.1-Stampare-sullo-standard-output-(normalmente-lo-schermo)">5.1 Stampare sullo standard output (normalmente lo schermo)<a class="anchor-link" href="#5.1-Stampare-sullo-standard-output-(normalmente-lo-schermo)">¶</a></h2><p>La funzione <code>print</code> è il comando utilizzato più comunemente per stampare informazioni sullo “standard output device” che normalmente è lo schermo.</p>
+<h2 id="Stampare-sullo-standard-output-(normalmente-lo-schermo)">Stampare sullo standard output (normalmente lo schermo)<a class="anchor-link" href="#Stampare-sullo-standard-output-(normalmente-lo-schermo)">¶</a></h2><p>La funzione <code>print</code> è il comando utilizzato più comunemente per stampare informazioni sullo “standard output device” che normalmente è lo schermo.</p>
 <p>Ci sono due modi per usare print.</p>
-<h3 id="5.1.1-print-semplice">5.1.1 print semplice<a class="anchor-link" href="#5.1.1-print-semplice">¶</a></h3><p>Il modo più facile di usare il comando <code>print</code> è passargli l'elenco delle variabili da stampare separate da un virgola. Qualche esempio:</p>
+<h3 id="print-semplice"><code>print</code> semplice<a class="anchor-link" href="#print-semplice">¶</a></h3><p>Il modo più facile di usare il comando <code>print</code> è passargli l'elenco delle variabili da stampare separate da un virgola. Qualche esempio:</p>
 </div>
 </div>
 </div>
@@ -7656,7 +7656,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="5.1.2-f-strings:-il-metodo-pi%C3%B9-semplice-e-recente-di-specificare-il-format">5.1.2 f-strings: il metodo più semplice e recente di specificare il format<a class="anchor-link" href="#5.1.2-f-strings:-il-metodo-pi%C3%B9-semplice-e-recente-di-specificare-il-format">¶</a></h3><p>È sufficiente mettere il simbolo <code>f</code>, da cui il nome f-strings, di fronte al delimitatore iniziale della stringa e poi, all'interno della stringa stessa specificare variabile e formato fra parentesi graffe.</p>
+<h3 id="f-strings:-il-metodo-pi%C3%B9-semplice-e-moderno-di-specificare-il-format">f-strings: il metodo più semplice e moderno di specificare il format<a class="anchor-link" href="#f-strings:-il-metodo-pi%C3%B9-semplice-e-moderno-di-specificare-il-format">¶</a></h3><p>È sufficiente mettere il simbolo <code>f</code>, da cui il nome f-strings, di fronte al delimitatore iniziale della stringa e poi, all'interno della stringa stessa specificare variabile e formato fra parentesi graffe.</p>
 </div>
 </div>
 </div>
@@ -8075,7 +8075,7 @@ più semplice è usare <code>"""</code> per delimitare la stringa</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="5.1.3-Il-metodo-format">5.1.3 Il metodo <code>format</code><a class="anchor-link" href="#5.1.3-Il-metodo-format">¶</a></h3><p>Spesso si trovano esempi di una notazione più datata per specificare il formato di scrittura di una stringa che utilizza il metodo <code>format</code>. La specificazione del formato è quella già vista nel caso delle <code>f-string</code>. Mentre le istruzioni di formattazione sono all'interno della stringa da stampare, racchiuse da parentesi graffe,
+<h3 id="Il-metodo-format">Il metodo <code>format</code><a class="anchor-link" href="#Il-metodo-format">¶</a></h3><p>Spesso si trovano esempi di una notazione più datata per specificare il formato di scrittura di una stringa che utilizza il metodo <code>format</code>. La specificazione del formato è quella già vista nel caso delle <code>f-string</code>. Mentre le istruzioni di formattazione sono all'interno della stringa da stampare, racchiuse da parentesi graffe,
 i corrispondenti dati sono passati attraverso il metodo <code>format</code>.</p>
 <p>Le idee fondamentali attraverso esempi:</p>
 </div>
@@ -8266,7 +8266,7 @@ i corrispondenti dati sono passati attraverso il metodo <code>format</code>.</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="5.2-Leggere-e-scrivere-files">5.2 Leggere e scrivere files<a class="anchor-link" href="#5.2-Leggere-e-scrivere-files">¶</a></h2><p>Ecco un programmma che</p>
+<h2 id="Leggere-e-scrivere-files">Leggere e scrivere files<a class="anchor-link" href="#Leggere-e-scrivere-files">¶</a></h2><p>Ecco un programmma che</p>
 <ol>
 <li>crea un file di nome <code>test.txt</code></li>
 <li>scrive del testo nel file</li>
