--- a/html/09_numpy_statistics.html
+++ b/html/09_numpy_statistics.html
@@ -7526,7 +7526,7 @@ a.anchor-link {
 </li></li></li></ul>
 </div>
 <hr/>
-<h2 id="9.1-Nozioni-fondamentali">9.1 Nozioni fondamentali<a class="anchor-link" href="#9.1-Nozioni-fondamentali">¶</a></h2><p>La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perchè
+<h2 id="Nozioni-fondamentali">Nozioni fondamentali<a class="anchor-link" href="#Nozioni-fondamentali">¶</a></h2><p>La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perchè
 la rappresentazione grafica dei dati è uno strumento estremamente utile.</p>
 <div style="padding:20px 20px 0px 150px;">
 <img align="center" alt="No description has been provided for this image" src="../Humour/extrapolating1.png" width="500"/>
@@ -7810,7 +7810,7 @@ Calcolate media e deviazione standard di <code>my_arr</code> usando i metodi <b>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="9.2-Istogramma-delle-frequenze">9.2 Istogramma delle frequenze<a class="anchor-link" href="#9.2-Istogramma-delle-frequenze">¶</a></h2><p>L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati</p>
+<h2 id="Istogramma-delle-frequenze">Istogramma delle frequenze<a class="anchor-link" href="#Istogramma-delle-frequenze">¶</a></h2><p>L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati</p>
 </div>
 </div>
 </div>
@@ -8020,7 +8020,7 @@ In un notebook separato <a href="anscombe.ipynb"> anscombe.ipynb</a> potete trov
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="9.3-Numeri-Casuali">9.3 Numeri Casuali<a class="anchor-link" href="#9.3-Numeri-Casuali">¶</a></h2><p>La generazione di numeri casuali secondo una distribuzione data ha numerose importanti applicazioni.
+<h2 id="Numeri-Casuali">Numeri Casuali<a class="anchor-link" href="#Numeri-Casuali">¶</a></h2><p>La generazione di numeri casuali secondo una distribuzione data ha numerose importanti applicazioni.
 Il notebook <a href="./11_MetodoMontecarlo.ipynb">11_MetodoMontecarlo</a> fornisce una discussione più approfondita e diversi esempi.<br/>
 Nelle versioni più recenti di Numpy (&gt;1.17) è stata introdotto un oggetto <code>default_rng</code> i cui metodi possono essere utilizzati
 per generare set di valori distribuiti secondo le singole distribuzioni di probabilità.</p>
@@ -8054,7 +8054,7 @@ per generare set di valori distribuiti secondo le singole distribuzioni di proba
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="9.3.1-Alcuni-esempi-con-distribuzioni-di-uso-frequente:">9.3.1 Alcuni esempi con distribuzioni di uso frequente:<a class="anchor-link" href="#9.3.1-Alcuni-esempi-con-distribuzioni-di-uso-frequente:">¶</a></h3>
+<h3 id="Alcuni-esempi-con-distribuzioni-di-uso-frequente:">Alcuni esempi con distribuzioni di uso frequente:<a class="anchor-link" href="#Alcuni-esempi-con-distribuzioni-di-uso-frequente:">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8458,7 +8458,7 @@ Di ciascun campione</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="9.4-Distribuzioni-di-probabilit%C3%A0">9.4 Distribuzioni di probabilità<a class="anchor-link" href="#9.4-Distribuzioni-di-probabilit%C3%A0">¶</a></h2><p>Il modulo <code>scipy.stats</code> contiene le principali distribuzioni di probabilità, sia discrete che continue, funzioni che permettono di calcolare i parametri statistici più comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o più set di dati.<br/>
+<h2 id="Distribuzioni-di-probabilit%C3%A0">Distribuzioni di probabilità<a class="anchor-link" href="#Distribuzioni-di-probabilit%C3%A0">¶</a></h2><p>Il modulo <code>scipy.stats</code> contiene le principali distribuzioni di probabilità, sia discrete che continue, funzioni che permettono di calcolare i parametri statistici più comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o più set di dati.<br/>
 Per ulteriori informazioni <a href="https://docs.scipy.org/doc/scipy/reference/stats.html">https://docs.scipy.org/doc/scipy/reference/stats.html</a>.</p>
 </div>
 </div>
@@ -8470,7 +8470,7 @@ Per ulteriori informazioni <a href="https://docs.scipy.org/doc/scipy/reference/s
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="9.4.1-Distribuzione-normale:-$%5C,%5C,N(x)-=-%5Cfrac%7B%5Cexp-(-x%5E2/2)%7D%7B%5Csqrt%7B2%5C,%5Cpi%7D%7D$">9.4.1 Distribuzione normale: $\,\,N(x) = \frac{\exp (-x^2/2)}{\sqrt{2\,\pi}}$<a class="anchor-link" href="#9.4.1-Distribuzione-normale:-$%5C,%5C,N(x)-=-%5Cfrac%7B%5Cexp-(-x%5E2/2)%7D%7B%5Csqrt%7B2%5C,%5Cpi%7D%7D$">¶</a></h3>
+<h3 id="Distribuzione-normale:-$%5C,%5C,N(x)-=-%5Cfrac%7B%5Cexp-(-x%5E2/2)%7D%7B%5Csqrt%7B2%5C,%5Cpi%7D%7D$">Distribuzione normale: $\,\,N(x) = \frac{\exp (-x^2/2)}{\sqrt{2\,\pi}}$<a class="anchor-link" href="#Distribuzione-normale:-$%5C,%5C,N(x)-=-%5Cfrac%7B%5Cexp-(-x%5E2/2)%7D%7B%5Csqrt%7B2%5C,%5Cpi%7D%7D$">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8551,7 +8551,8 @@ Per ulteriori informazioni <a href="https://docs.scipy.org/doc/scipy/reference/s
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Grafico-della-distribuzione-cumulativa-(cdf):--$%5C,%5C,C(x)-=-%5Cint_%7B-%5Cinfty%7D%5Ex-N(y)%5C,-dy$">Grafico della distribuzione cumulativa (cdf):  $\,\,C(x) = \int_{-\infty}^x N(y)\, dy$<a class="anchor-link" href="#Grafico-della-distribuzione-cumulativa-(cdf):--$%5C,%5C,C(x)-=-%5Cint_%7B-%5Cinfty%7D%5Ex-N(y)%5C,-dy$">¶</a></h4>
+<h4 id="Grafico-della-distribuzione-cumulativa-(cdf)">Grafico della distribuzione cumulativa (cdf)<a class="anchor-link" href="#Grafico-della-distribuzione-cumulativa-(cdf)">¶</a></h4><p>La distribuzione cumulativa $C(x)$ di una distribuzione di probabilità $N(x)$ è definita come
+$\,\,C(x) = \int_{-\infty}^x N(y)\, dy$</p>
 </div>
 </div>
 </div>
@@ -8591,7 +8592,7 @@ Per ulteriori informazioni <a href="https://docs.scipy.org/doc/scipy/reference/s
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="9.4.1-Distribuzione-di-Poisson:-$f(k)-=-%5Cexp(-%5Cmu)%5C,-%5Cfrac%7B%5Cmu%5Ek%7D%7Bk!%7D$">9.4.1 Distribuzione di Poisson: $f(k) = \exp(-\mu)\, \frac{\mu^k}{k!}$<a class="anchor-link" href="#9.4.1-Distribuzione-di-Poisson:-$f(k)-=-%5Cexp(-%5Cmu)%5C,-%5Cfrac%7B%5Cmu%5Ek%7D%7Bk!%7D$">¶</a></h3>
+<h3 id="Distribuzione-di-Poisson:-$f(k)-=-%5Cexp(-%5Cmu)%5C,-%5Cfrac%7B%5Cmu%5Ek%7D%7Bk!%7D$">Distribuzione di Poisson: $f(k) = \exp(-\mu)\, \frac{\mu^k}{k!}$<a class="anchor-link" href="#Distribuzione-di-Poisson:-$f(k)-=-%5Cexp(-%5Cmu)%5C,-%5Cfrac%7B%5Cmu%5Ek%7D%7Bk!%7D$">¶</a></h3>
 </div>
 </div>
 </div>
