--- a/html/13_Classi.html
+++ b/html/13_Classi.html
@@ -7517,7 +7517,8 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Object-Oriented-Programming-(OOP)-e-Classi-in-Python">Object Oriented Programming (OOP) e Classi in Python<a class="anchor-link" href="#Object-Oriented-Programming-(OOP)-e-Classi-in-Python">¶</a></h1><h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><p>Questo notebook si basa sulle lezioni 8 e 9 di:
+<h1 style="font-size:50px">13: Object Oriented Programming (OOP) e Classi in Python</h1>
+<h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><p>Questo notebook si basa sulle lezioni 8 e 9 di:
 <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/">https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/</a></p>
 <p>Python contiene molti tipi di dati:</p>
 <ul>
@@ -7688,7 +7689,7 @@ A parte l'uso di <code>self</code> e della notazione <code>.</code> per la chiam
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Come-usare-i-metodi-di-una-classe">Come usare i metodi di una classe<a class="anchor-link" href="#Come-usare-i-metodi-di-una-classe">¶</a></h4>
+<h3 id="Come-usare-i-metodi-di-una-classe">Come usare i metodi di una classe<a class="anchor-link" href="#Come-usare-i-metodi-di-una-classe">¶</a></h3>
 </div>
 </div>
 </div>
@@ -7809,7 +7810,7 @@ Cell <span class="ansi-green-fg">In[18], line 8</span>, in <span class="ansi-cya
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Stampare-un-esemplare-di-una-classe-e-metodo-__str__">Stampare un esemplare di una classe e metodo <code>__str__</code><a class="anchor-link" href="#Stampare-un-esemplare-di-una-classe-e-metodo-__str__">¶</a></h4>
+<h3 id="Stampare-un-esemplare-di-una-classe-e-metodo-__str__">Stampare un esemplare di una classe e metodo <code>__str__</code><a class="anchor-link" href="#Stampare-un-esemplare-di-una-classe-e-metodo-__str__">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8318,7 +8319,7 @@ denominator: 3
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">Accedere e modificare i dati di un esemplare: getters and setters<a class="anchor-link" href="#Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">¶</a></h4><p>Abbiamo visto che se nell' <code>__init__</code> di una classe <code>C</code> è definito l'attributo <code>x</code> è possibile accedere al valore dell'attributo per un esemplare <code>es</code> con la notazione <code>es.x</code>.<br/>
+<h3 id="Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">Accedere e modificare i dati di un esemplare: getters and setters<a class="anchor-link" href="#Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">¶</a></h3><p>Abbiamo visto che se nell' <code>__init__</code> di una classe <code>C</code> è definito l'attributo <code>x</code> è possibile accedere al valore dell'attributo per un esemplare <code>es</code> con la notazione <code>es.x</code>.<br/>
 È però preferibile e fortemente incoraggiato accedere e modificare, dall'esterno della classe, gli attributi di un esemplare attraverso metodi appositi, detti getters e setters, che devono essere definiti all'interno della classe.</p>
 </div>
 </div>
